[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyStrata"
version = "0.5.5"
authors = [{ name = "Albert Kottke", email = "albert.kottke@gmail.com" }]
description = "Site response analysis with Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "pykooh",
    "pyrvt",
    "scipy",
    "setuptools",
    "tomli",
]

[project.urls]
Homepage = "https://github.com/arkottke/pystrata"
Documentation = "https://pystrata.readthedocs.io"

[tool.hatch.build.targets.sdist]
exclude = ["/*.yml", "/.*", "/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/pystrata"]

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
exclude = ["docs"]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py310"

extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E203"]

[tool.hatch.envs.style]
detached = true
dependencies = ["black[colorama,jupyter]", "ruff"]


# Format with black first to wrap comments
[tool.hatch.envs.style.scripts]
fmt = ['black .', 'ruff check --fix .']


[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.test]
dependencies = [
    "numpy>=2.0",
    "coverage[toml]",
    "nbformat",
    "nbconvert",
    "pytest",
    "pytest-cov",
    "pytest-runner",
    "openpyxl",
    # FIXME: Add as dependency of pystrata
    "matplotlib",
    "pykooh",
    "tomli",
    "pandas",
    "pyexcel",
    # Done
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run-coverage-xml = "run-coverage --cov-report xml"
run = "run-coverage --no-cov"

[tool.hatch.envs.docs]
detached = true
dependencies = [
    "mkdocs",
    "markdown-callouts",
    "mkdocstrings[python]",
    "mkdocs-bibtex",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-jupyter",
    "black[colorama,jupyter]",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"
