# See: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = pystrata
version = attr: pystrata.__version__
description = Site response analysis with Python
description_file = README.md
long_description = file: README.md, HISTORY.md
author = Albert R. Kottke
author_email = albert.kottke@gmail.com
license = MIT
url = https://github.com/arkottke/pystrata
python_requires='>=3.8'

[options]
packages = find:

[aliases]
test = pytest

[flake8]
exclude = docs/

[yapf]
based_on_style = pep8
spaces_around_power_operator = true

[tool:test]
addopts = --flake8

[wheel]
universal = 1

[pydocstyle]
ignore = D100,D101,D102,D103,D104,W503
